<resources>
    <string name="app_name">BookShare</string>
    <string name="Login_main">Hello, Sign in to your account</string>
    <string name="Login_user">Email</string>
    <string name="Login_button">Login</string>
    <string name="Password">Password</string>
    <string name="signup">Registration</string>
    <string name="registerbtn">Sign Up</string>
    <string name="btn">Already Registered? Login here</string>
    <string name="Register">Create new account</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="Add_Update">Add/update a Book</string>
    <string name="Borrow">Borrow a Book</string>
    <string name="Reading">Reading Tracker</string>
    <string name="btnAdd">Add a book</string>
    <string name="btnaddSubmit">Submit</string>
    <string name="btnUpdate">Update a book</string>
    <string name="title">Title</string>
    <string name="aurthor">Aurthor</string>
    <string name="Publisher">Publisher</string>
    <string name="pubyear">Publisher Year</string>
    <string name="share">Share a book</string>
    <string name="giveaway">Giveaway a book</string>
    <string name="rentout">Rent out</string>
    <string name="status">Do you want to change the Status?</string>
    <string name="available">Available</string>
    <string name="notavailable">Not Available</string>
    <string name="set_a_pickup_time">Set a Pickup Time</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="Logo">Logo</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="reading_interest">Reading Interest</string>
    <string name="email">Email</string>
    <string name="create_a_user">Create a user</string>
    <string name="update_a_user">Update a user</string>
    <string name="send_a_message">Send a message</string>
    <string name="delete_a_user">Delete a user</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_login_id">Admin Login Id</string>
    <string name="find_books">Find books</string>
    <string name="rented_book">Rented Book?</string>
    <string name="shared_book">Shared Book?</string>
    <string name="enter_your_reading_history_here">Enter your Reading history here!</string>
    <string name="book_name">Book Name</string>
    <string name="click_here_to_read_online">Click here to read online</string>
    <string name="click_here_to_see_reading_history">Click here to See Reading History</string>
    <string name="update">Update</string>
    <string name="book_owner_s_information">Book Owner\'s Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="want_pickup">Want Pickup?</string>
    <string name="username">Username</string>
    <string name="Admin">R u Looking for Admin page?</string>
    <string name="forget">Forget</string>
    <string name="password_reset">Password Reset</string>
    <string name="confirm_password">Confirm Password</string>
</resources>