<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pickup">

    <Space
        android:layout_width="match_parent"
        android:layout_height="91dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        app:srcCompat="@drawable/img_bookshare2"
        android:contentDescription="@string/Logo" />

    <TextView
        android:id="@+id/txtview2"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/set_a_pickup_time"
        android:textColor="#696969"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button14"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        tools:ignore="TextContrastCheck" />

</LinearLayout>