<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        app:srcCompat="@drawable/img_bookshare2"
        android:contentDescription="@string/Logo" />

    <TextView
        android:id="@+id/txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Login_main"
        android:textColor="#696969"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainLoginEmail"
                android:layout_width="335dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/icons8_user_30"
                android:drawablePadding="15dp"
                android:hint="@string/Login_user"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:rotationX="0"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mainLoginPassword"
                android:layout_width="335dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/icons8_password_24"
                android:drawablePadding="15dp"
                android:hint="@string/Password"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:rotationX="0"
                android:singleLine="true"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/MainLoginBtn"
        style="@style/Button"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/Login_button"
        android:textAllCaps="false"
        android:textColor="#0D47A1"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/forgetABtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="218dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ForgotPassword"
        android:textColor="@color/button"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/CreateBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@color/teal_700"
        android:text="@string/Register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/adminBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:layout_marginTop="10dp"
        android:text="@string/Admin"
        android:textColor="@color/button"
        tools:ignore="TextContrastCheck" />

</LinearLayout>