<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Addbook">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/img_bookshare2" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:hint="@string/title"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:rotationX="0"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:hint="@string/aurthor"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:rotationX="0"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:hint="@string/Publisher"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:rotationX="0"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:hint="@string/pubyear"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:rotationX="0"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/share" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/giveaway" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rentout" />

    <Button
        android:id="@+id/button12"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/btnaddSubmit"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>