<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Adminlogin">

    <Space
        android:layout_width="match_parent"
        android:layout_height="91dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:contentDescription="@string/Logo"
        app:srcCompat="@drawable/img_bookshare2" />

    <TextView
        android:id="@+id/txtview3"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/admin_login"
        android:textColor="#696969"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/icons8_user_30"
                android:drawablePadding="15dp"
                android:hint="@string/admin_login_id"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:rotationX="0"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/icons8_password_24"
                android:drawablePadding="15dp"
                android:hint="@string/Password"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:paddingBottom="10dp"
                android:rotationX="0"
                android:singleLine="true"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button22"
        style="@style/Button"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/Login_button"
        android:textAllCaps="false"
        tools:ignore="TextContrastCheck" />
</LinearLayout>