<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddUpdate_book">

    <Space
        android:layout_width="match_parent"
        android:layout_height="91dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:contentDescription="@string/Logo"
        app:srcCompat="@drawable/img_bookshare2" />

    <Button
        android:id="@+id/addabookBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:background="@color/teal_700"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/btnAdd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/updateabookBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:background="@color/teal_700"
        android:gravity="center|start"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/btnUpdate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />
</LinearLayout>