<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

  <ImageView
      android:id="@+id/imageView7"
      android:layout_width="match_parent"
      android:layout_height="90dp"
      android:contentDescription="@string/Logo"
      app:srcCompat="@drawable/img_bookshare2" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="413dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="25dp"
      android:layout_marginEnd="0dp"
      android:gravity="center"
      android:paddingStart="15dp"
      android:paddingEnd="0dp"
      android:text="@string/signup"
      android:textColor="#696969"
      android:textSize="20sp"
      android:textStyle="bold" />

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      app:cardCornerRadius="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/RegisterUsername"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:layout_weight="1"
          android:background="@android:color/transparent"
          android:drawableStart="@drawable/icons8_user_30"
          android:drawablePadding="15dp"
          android:hint="@string/username"
          android:paddingStart="10dp"
          android:paddingTop="10dp"
          android:paddingEnd="0dp"
          android:paddingBottom="10dp"
          android:rotationX="0"
          android:singleLine="true"
          tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginTop="15dp"
      app:cardCornerRadius="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/ResetPassword"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableStart="@drawable/icons8_password_24"
          android:drawablePadding="15dp"
          android:hint="@string/Password"
          android:paddingStart="10dp"
          android:paddingTop="10dp"
          android:paddingEnd="0dp"
          android:paddingBottom="10dp"
          android:rotationX="0"
          android:singleLine="true"
          tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginTop="15dp"
      app:cardCornerRadius="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/forgetAge"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableStart="@drawable/icons8_age_26"
          android:drawablePadding="15dp"
          android:hint="@string/age"
          android:paddingStart="10dp"
          android:paddingTop="10dp"
          android:paddingEnd="0dp"
          android:paddingBottom="10dp"
          android:rotationX="0"
          android:singleLine="true"
          tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginTop="15dp"
      app:cardCornerRadius="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/forgetAddress"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableStart="@drawable/icons8_address_24"
          android:drawablePadding="15dp"
          android:hint="@string/address"
          android:paddingStart="10dp"
          android:paddingTop="10dp"
          android:paddingEnd="0dp"
          android:paddingBottom="10dp"
          android:rotationX="0"
          android:singleLine="true"
          tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginTop="15dp"
      app:cardCornerRadius="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/RegisterReading"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableStart="@drawable/icons8_reading_30"
          android:drawablePadding="15dp"
          android:hint="@string/reading_interest"
          android:paddingStart="10dp"
          android:paddingTop="10dp"
          android:paddingEnd="0dp"
          android:paddingBottom="10dp"
          android:rotationX="0"
          android:singleLine="true"
          tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginTop="15dp"
      app:cardCornerRadius="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/forgetEmail"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@android:color/transparent"
          android:drawableStart="@drawable/icons8_email_open_24"
          android:drawablePadding="15dp"
          android:hint="@string/email"
          android:paddingStart="10dp"
          android:paddingTop="10dp"
          android:paddingEnd="0dp"
          android:paddingBottom="10dp"
          android:rotationX="0"
          android:singleLine="true"
          tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>
  </androidx.cardview.widget.CardView>

  <Button
      android:id="@+id/RegisterLoginBtn"
      style="@style/Button"
      android:layout_width="352dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="25dp"
      android:text="@string/Login_button"
      android:textAllCaps="false"
      android:textColor="#0D47A1"
      tools:ignore="TextContrastCheck" />

</LinearLayout>